--- a/module-services/paymentservices/Dockerfile
+++ b/module-services/paymentservices/Dockerfile
@@ -38,17 +38,19 @@ RUN mkdir -p /tmp
 
 # Set environment variables with defaults
 ENV PORT=6000
+ENV GRPC_PORT=9000
 ENV SERVICE_NAME=paymentservices
 ENV CAMEL_GATEWAY_URL=http://camel-gateway:8080
+ENV CAMEL_GATEWAY_GRPC_URL=camel-gateway:9090
 ENV REDIS_URL=redis:6379
 ENV MAX_WEEKLY_BENEFIT=600.00
 ENV REPLACEMENT_RATE=0.60
 ENV BENEFIT_WEEKS=26
 
-# Expose port
-EXPOSE 6000
+# Expose ports
+EXPOSE 6000 9000
 
-# Health check
+# Health check (using HTTP endpoint)
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:6000/health || exit 1
 
