--- a/module-services/camel-gateway/src/main/resources/application.properties
+++ b/module-services/camel-gateway/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 logging.level.org.apache.camel=INFO
 logging.level.com.playground.camel=DEBUG
 logging.level.root=INFO
+logging.level.io.grpc=INFO
 
 # Custom properties
 camel.health.check.interval=30000
@@ -35,13 +36,9 @@ spring.jpa.hibernate.ddl-auto=update
 # Enable component scanning for JPA repositories
 spring.data.jpa.repositories.enabled=true
 
-# ActiveMQ Artemis Configuration - Enhanced for External Access
-spring.artemis.mode=embedded
-spring.artemis.embedded.enabled=true
-spring.artemis.embedded.persistent=false
-spring.artemis.broker-url=tcp://0.0.0.0:61616
-spring.artemis.user=admin
-spring.artemis.password=admin
+# 🚀 NEW: gRPC Configuration
+# gRPC server port
+grpc.server.port=${GRPC_PORT:9090}
 
-# JMS Configuration
-spring.jms.template.default-destination=claim.events
+# Camel gRPC component configuration
+camel.component.grpc.enabled=true
